# Beispiel

./: Makefile  Makefile.in  config.status  configure  configure.ac  configure.scan.save
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  Soundex.h  Soundex.h~  SoundexTest.cpp  SoundexTest.cpp~  main.cpp
src/.deps/: SoundexTest.Po  main.Po
